--- a/.env.example
+++ b/.env.example
@@ -26,6 +26,9 @@ DB_DATABASE=staffmaster
 DB_USERNAME=postgres
 DB_PASSWORD=password
 
+PGADMIN_EMAIL=test@gmail.com
+PGADMIN_PASSWORD=test@gmail.com
+
 SESSION_DRIVER=redis
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
