--- a/.env.example
+++ b/.env.example
@@ -62,3 +62,8 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+
+ADMIN_NAME="admin"
+ADMIN_EMAIL="admin@gmail.com"
+ADMIN_PASSWORD="admin"
