env example - new admin password

--- a/.env.example
+++ b/.env.example
@@ -68,4 +68,4 @@ VITE_APP_NAME="${APP_NAME}"
 
 ADMIN_NAME="admin"
 ADMIN_EMAIL="admin@gmail.com"
-ADMIN_PASSWORD="admin"
+ADMIN_PASSWORD="admin123"
