--- a/docker/production/php/Dockerfile
+++ b/docker/production/php/Dockerfile
@@ -8,7 +8,7 @@ RUN apk --no-cache add bash zip git libzip-dev libpng-dev libpq-dev
 RUN docker-php-ext-install zip gd pdo pdo_pgsql
 RUN docker-php-ext-configure zip
 
-COPY ./docker/php/entrypoint.sh /entrypoint.sh
+COPY ./docker/production/php/entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
 
 ENTRYPOINT ["/entrypoint.sh"]
