--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -5,7 +5,7 @@ services:
         container_name: web-staffmaster
         working_dir: /app
         volumes:
-            - ./docker/development/nginx/config.conf:/etc/nginx/conf.d/default.conf
+            - ./docker/production/nginx/config.conf:/etc/nginx/conf.d/default.conf
             - .:/app
         networks:
             - app-net
@@ -22,7 +22,7 @@ services:
             - .:/app
         build:
             context: .
-            dockerfile: ./docker/development/php/Dockerfile
+            dockerfile: ./docker/production/php/Dockerfile
         networks:
             - app-net
         depends_on:
@@ -40,7 +40,7 @@ services:
             POSTGRES_USER: ${DB_USERNAME}
             POSTGRES_PASSWORD: ${DB_PASSWORD}
         volumes:
-            - db_data:/var/lib/postgresql/data
+            - db_data_prod:/var/lib/postgresql/data
         networks:
             - app-net
         healthcheck:
@@ -56,7 +56,7 @@ services:
         networks:
             - app-net
         volumes:
-            - redis_data:/data
+            - redis_data_prod:/data
         healthcheck:
             test: ["CMD", "redis-cli","ping"]
             interval: 5s
@@ -66,7 +66,7 @@ services:
     node:
         build:
             context: .
-            dockerfile: ./docker/development/node/Dockerfile
+            dockerfile: ./docker/production/node/Dockerfile
         container_name: node-staffmaster
         user: $DOCKER_USER
         working_dir: /app
@@ -88,12 +88,12 @@ services:
             PGADMIN_DEFAULT_EMAIL: ${PGADMIN_EMAIL}
             PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_PASSWORD}
         volumes:
-            - pgadmin_data:/var/lib/pgadmin
+            - pgadmin_data_prod:/var/lib/pgadmin
 networks:
     app-net:
         driver: bridge
 
 volumes:
-    db_data:
-    redis_data:
-    pgadmin_data:
+    db_data_prod:
+    redis_data_prod:
+    pgadmin_data_prod:
