--- a/docker/production/node/Dockerfile
+++ b/docker/production/node/Dockerfile
@@ -3,7 +3,7 @@ FROM node:20-alpine
 RUN apk update
 RUN apk --no-cache add bash
 
-COPY ./docker/node/entrypoint.sh /entrypoint.sh
+COPY ./docker/production/node/entrypoint.sh /entrypoint.sh
 RUN chmod +x /entrypoint.sh
 
 ENTRYPOINT ["/entrypoint.sh"]
